# mknm_os

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  run_qemu.sh
.devcontainer/: devcontainer.json
bootloader/: Cargo.toml  rust-toolchain.toml
bootloader/.cargo/: config.toml
bootloader/src/: elf.rs  frame_buffer.rs  main.rs  memory_map.rs
kernel/: .gitignore  Cargo.toml  build.rs  x86_64-mikanami_OS.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  console.rs  font.rs  frame_buffer.rs  graphics.rs  interrupt.rs  main.rs  memory_manager.rs  memory_map.rs  mouse.rs  paging.rs  pci.rs  segment.rs  task.rs  taskB.rs  timer.rs  window.rs  xhci.rs
kernel/src/asm/: mod.rs
kernel/src/graphic/: buffered.rs  font.rs  frame_buffer.rs  graphics.rs  mod.rs  window.rs
kernel/src/usb/: context.rs  device.rs  mod.rs  ring.rs  runtime.rs  usbd.rs  util.rs  xhci.rs
kernel/src/usb/action/: init_device.rs  mod.rs
kernel/src/usb/class/: key.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/usb/ring/: command.rs  event.rs  mod.rs  ring.rs  transfer.rs
novnc/: Dockerfile  start.sh
usb_bindings/: Cargo.toml  build.rs
usb_bindings/.cargo/: config.toml
usb_bindings/src/: lib.rs
usb_bindings/src/c/: Makefile  logger.cpp  logger.hpp  wrapper.cpp  wrapper.hpp
