[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
bitfield = "0.14.0"
lock_api = "0.4.9"
x86_64 = "0.14.10"
xhci = "0.9.2"
futures = { version = "0.3", default-features = false, features = ["alloc"]}

[dependencies.num-traits]
num-version = "0.2.15"
default-features = false